# ilios_test

./: db.sqlite3  pyproject.toml  render.yaml  requirements.txt
car_rental/: settings.py  urls.py
car_rental/cars/: admin.py  apps.py  models.py  urls.py  views.py
car_rental/cars/migrations/: 0001_initial.py  0002_rename_car_vehicle.py  0003_rename_vehicle_car.py  0004_alter_car_status.py  0005_car_photo.py  0006_alter_car_photo.py  0007_alter_car_plate_alter_car_status.py
car_rental/cars/templates/cars/: index.html
car_rental/core/: apps.py  urls.py
car_rental/core/static/css/: styles.css
car_rental/core/templates/: base.html  home.html
car_rental/rental/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
car_rental/rental/migrations/: 0001_initial.py  0002_alter_rental_options_rename_car_rental_vehicle.py  0003_alter_rental_options_rename_vehicle_rental_car.py  0004_rental_status.py
car_rental/rental/templates/rental/: index.html  rental_modal.html
